<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".fragments.EditFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_area_property_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/area"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_area_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_price_property_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/price"
        app:layout_constraintTop_toBottomOf="@id/text_edit_area_property_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_price_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_quantity_room_property_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/quantity_room"
        app:layout_constraintTop_toBottomOf="@id/text_edit_price_property_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_quantity_room_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_floor_property_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="@string/floor"
        app:layout_constraintTop_toBottomOf="@id/text_edit_quantity_room_property_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_floor_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_edit_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_floor_property_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>