<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".fragments.ViewFragment">

    <ImageView
        android:id="@+id/image_view_property"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/image_view_property">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_price"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_price_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_area"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_area_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_address"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_address_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_quantity_room"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_quantity_room_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_price_sqm"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_price_sqm_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/linear5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_floor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_view_floor_property"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>