<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    tools:context=".fragments.AddFragment">

    <ScrollView
        android:id="@+id/scr_add_property"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/image_add_property"
                android:layout_width="196dp"
                android:layout_height="196dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_construction"
                app:layout_constraintTop_toBottomOf="@+id/scr_add_property" />

            <TextView
                android:id="@+id/txt_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:visibility="gone"
                android:textColor="@android:color/holo_red_dark" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_add_address_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/address"

                app:layout_constraintTop_toBottomOf="@+id/image_add_property">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_add_address_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_add_area_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/area"

                app:layout_constraintTop_toBottomOf="@id/text_add_address_property_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_add_area_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_add_price_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/price"
                app:layout_constraintTop_toBottomOf="@id/text_add_area_property_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_add_price_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_add_quantity_room_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/quantity_room"

                app:layout_constraintTop_toBottomOf="@id/text_add_price_property_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_add_quantity_room_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_add_floor_property_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/floor"
                app:layout_constraintTop_toBottomOf="@id/text_add_quantity_room_property_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_add_floor_property"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_property"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/save"
                app:layout_constraintTop_toBottomOf="@+id/text_add_floor_property_layout" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>